connect wallet z-index error fixed

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -4578,4 +4578,7 @@ color: #444;
   .select-text-color-dark{
     color: #fff;
   }
+  .z-2{
+    z-index: 2!important;
+  }
 /*# sourceMappingURL=26b848d58538f4f7.css.map*/
